arquivo final js
Testando arquivo JS, deu um erro no site, estou procurando onde esta.

--- a/main.html
+++ b/main.html
@@ -80,10 +80,10 @@
       <div id="d-body"></div>
     </div>
   </dialog>
-
 <script src="./app.js?v=2" defer
-  onload="console.log('✅ app.js carregado:', this.src)"
-  onerror="console.error('❌ app.js FALHOU:', this.src)"></script>
+  onload="console.log('✅ index: app.js carregado')"
+  onerror="console.error('❌ index: app.js falhou', this.src)"></script>
+
 
 </body>
 </html>
