--- a/main.html
+++ b/main.html
@@ -80,9 +80,7 @@
       <div id="d-body"></div>
     </div>
   </dialog>
-<script src="./app.js?v=2" defer
-  onload="console.log('✅ index: app.js carregado')"
-  onerror="console.error('❌ index: app.js falhou', this.src)"></script>
+<script src="app.js"></script>
 
 
 </body>
